tests/snapshots/cli__reference_files@factor__20.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/20.factor
---
status: 0
stdout:
  - "-inf"
stderr: []
