tests/snapshots/cli__reference_files@factor__21.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/21.factor
---
status: 0
stdout:
  - "48717504923846330000000"
stderr: []
