tests/snapshots/cli__reference_files@factor__23.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/23.factor
---
status: 0
stdout:
  - "73778207.8383"
stderr: []
