tests/snapshots/cli__reference_files@factor__24.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/24.factor
---
status: 101
stdout: []
stderr:
  - "thread 'main' panicked at src/interpreter.rs:43:55:"
  - attempt to divide by zero
  - "note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace"
