tests/snapshots/cli__reference_files@factor__25.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/25.factor
---
status: 0
stdout:
  - "8"
stderr: []
