tests/snapshots/cli__reference_files@factor__3.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/3.factor
---
status: 0
stdout:
  - "50165899142551790"
stderr: []
