tests/snapshots/cli__reference_files@factor__4.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/4.factor
---
status: 0
stdout:
  - "7"
stderr: []
