tests/snapshots/cli__reference_files@factor__5.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/5.factor
---
status: 0
stdout:
  - "-8409135956"
stderr: []
