tests/snapshots/cli__reference_files@factor__6.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/6.factor
---
status: 0
stdout:
  - "166.6233"
stderr: []
