tests/snapshots/cli__reference_files@factor__8.factor.snap
---
source: tests/cli.rs
expression: test_output
input_file: test-files/factor/8.factor
---
status: 0
stdout:
  - "NaN"
stderr: []
